# IndonesiaLipReading_GNN

./: .gitignore  CHECKPOINTS_SUMMARY.md  DEBUGGING_ANALYSIS.md  DEBUGGING_GUIDE.md  DEBUGGING_SUMMARY.md  EXTRACTION_ANALYSIS.md  EXTRACTION_GAPS_ANALYSIS.md  FACEMESH_EXTRACTOR_ANALYSIS.md  FOLDER_STRUCTURE.md  MODEL_COMPARISON.md  MODEL_PARAMETERS.md  README.md  asd.py  asd.txt  inspect_model_params.py  inspect_pt.py  kaggle.json  pyproject.toml  requirements.txt  requirements_new.txt  video_to_node_viz.py
analysis/: OVERFITTING_FIXES.md  QUICK_SUMMARY.md  STRATEGIC_ANALYSIS.md
configs/: v3.py  v3_resume.py  v4.py  v4_balanced.py  v5.py
outputs/combined/: history.json
outputs/combined_20251109_113820/: cases_analysis.json  test_metrics.json  training_history.json
outputs/combined_20251110_123723/: cases_analysis.json  test_metrics.json  training_history.json
outputs/v1/: log_server.pid  train.pid
outputs/v2/: history.json
outputs/v3/: history.json
outputs/v5/: train.pid
reports/: classification_report_20251114_140520.txt  classification_report_20251115_190812.txt
scripts/: log_server.py  run_log_server.sh  run_training.sh  run_training_with_logs.sh  run_v5_training.sh  stop_training.sh
src/: config.py  eval.py  evaluate.py  evaluate_models.py  preprocess.py  preprocessing.py  train.py  train_sequential.py  visualize_training.py
src/check/: check_facemesh.py  check_facemesh_IDLR.py  check_facemesh_IDLRW.py  check_pt.py  diagnose_facemesh_IDLRW.py  preview_landmarks.py  visualize_checkpoints.py
src/configs/: paths.yaml
src/dataset/: __init__.py  (+8 more)
(+53 files in other folders)
