[project]
name = "lipreading-gnn"
version = "0.1.0"
description = "Lip reading using GNN"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",

    # Graph Neural Networks (install core, extensions optional)
    "torch-geometric>=2.6.1",

    # Computer Vision
    "opencv-python>=4.12.0",
    "mediapipe>=0.10.14",

    # Data Science
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",

    # Utilities
    "tqdm>=4.66.0",
    "matplotlib>=3.9.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# NOTE: torch-scatter, torch-sparse, torch-cluster, torch-spline-conv require torch installed first.
# For Mac M1, install manually from PyG wheels if needed.
